# testing

./: .gitmodules
altium/IC.USSA/: .gitignore  IC.USSA.LibPkg  IC.USSA.PcbLib  IC.USSA.SchLib
altium/KP580_Generator/: .gitignore  KP580_Generator.PrjPcb  PCB1.PcbDoc  Schema.SchDoc
android/: settings.gradle
android/app/: build.gradle
arduino/DS2431/: DS2431.ino
arduino/DS250x_PROM/: DS250x_PROM.ino
arduino/Mouse/: Mouse.ino
arduino/N5110/: N5110.ino  N5110_SPI.cpp  N5110_SPI.h
arduino/analogRead/: analogRead.ino
arduino/readPin/: readPin.ino
bananapi/: BR2_config  SPI64_Banana_M2M_V2  build_image.sh  build_kernel.sh  build_rootfs.sh  build_uboot.sh  command_history  dependencies.sh
c/9780596003944/: 9780596003944  README.md
c/F18A/: .gitignore  CMakeLists.txt  fasm
c/F18A/src/: emulator.c  f18.c  f18.h  f18_emu.c  f18a.c  socketpair.c  terminal.c
c/F18Y/: .gitignore  CMakeLists.txt
c/F18Y/src/: f18.c  f18.h  f18_emu.c
c/jm/: .gitignore  CMakeLists.txt  engine.c  engine.h  http_server.c  lua-amalgamation.c  mongoose.c  mongoose.h  mt_common.c  mt_common.h  v7.c
c/jm/web_root/: index.html
c/microhttpd/: .gitignore  CMakeLists.txt
c_fsm_control_sequence/: .gitignore  build.gradle  settings.gradle
cplusplus/: .gitignore  CMakeLists.txt
cplusplus/00.Utilities/: CMakeLists.txt  course_calculator.cpp  students.txt
cplusplus/01.Conceptions/: CMakeLists.txt  move_constructible.cpp
cplusplus/02.Exercise/: CMakeLists.txt  character_sort.c  character_sort.cxx  file_output_numeric.c  file_output_numeric.cxx  prime_sieve_eratosthene.cxx  test.c
cplusplus/03.Exercise/: CMakeLists.txt  bead_exchange.cxx  elegant_numbers.cxx
cplusplus/04.Exercise/: CMakeLists.txt  example_single.hex  file_replace_space.cxx  file_replace_ws_to_nl.cxx  intel_hex_format.c
cplusplus/fuzzy/: .gitignore  build_libFuzzer.bat  environment.bat  example_MemorySanitizer.cc  example_Undefined.cc  example_UseAfterFree.cc  start.bat
cxx_botan/: .gitignore  CMakeLists.txt  botan_all.h  main.cpp
cxx_botan/unix/: botan_all.cpp  botan_all.h  botan_all_internal.h
cxx_botan/windows/: botan_all.cpp  botan_all.h  botan_all_internal.h
firmware/: ZTE-Ros.sh
fpga/: tproject.sublime-project  tproject.sublime-workspace
fpga/top/: .gitignore  top.qpf  top.qsf  top.v
fpga/tproject/: Makefile  SimpleCounter.vvp  counter.v  counter_tb.v  io_signals.vcd
fpga/uart/: .gitignore  Button.bsf  Button.v  ISSP.bsf  ISSP.qip  ISSP.v  PLCC0.bsf  PLCC0.ppf  PLCC0.qip  PLCC0.v  PLL.bsf  PLL.qip  PLL.v  main.bdf  uart.bsf  uart.dpf  uart.qpf  uart.qsf  uart.qws  uart.sdc  uart.v  uart_assignment_defaults.qdf  uart_nativelink_simulation.rpt
golang/gapi/: .gitignore  Makefile
golang/getting_started/: .gitignore
golang/mini_restful_bioapi/: .gitignore  commons.go  compare_test.go  configurator.go  configurator_test.go  controller.go  controller_test.go  errors.go  export_test.go  main.go  main_test.go  server.go
golang/mini_restful_db/: main.go
golang/pipister/: main.go
golang/rest_book/: main.go
golang/send_students/: main.go
java/lightweight-http/: .gitignore  pom.xml
java/minio-connector/: .gitignore  pom.xml
kicad/Clocker/: Clocker-cache.lib  Clocker.kicad_pcb  Clocker.kicad_pcb-bak  Clocker.pro  Clocker.sch  Clocker.sch-bak
kicad/Z80/: Z80-cache.lib  Z80.kicad_pcb  Z80.kicad_pcb-bak  Z80.net  Z80.pro  Z80.sch  Z80.sch-bak  Z80.xml  fp-info-cache
kicad/beacon/: beacon-cache.lib  beacon.kicad_pcb  beacon.kicad_pcb-bak  beacon.net  beacon.pro  beacon.sch  beacon.sch-bak
kotlin/: .gitignore  gradle.properties  settings.gradle
mos/: crypto_mdash_device.bat
mos/atca/: configuration.yml  configure.bat  ecc.csr.tmpl  ecc.key.pem  generate_key.bat  generate_key.sh  slot4.key
perl/: lb.information.acc.pl
python/notification_plugin/: .gitignore  build.bat  (+6 more)
rustlang/: README.md
rustlang/abb_robo/: Cargo.toml  refresh.bat  refresh.sh
rustlang/abb_robo/migrations/2021-04-09-140332_create_scheme/: up.sql
rustlang/abb_robo/src/: abb.rs  abb.rs_  cache.rs  db.rs  main.rs  schema.rs
rustlang/abb_robo/src/models/: chat.rs  message.rs  mod.rs  user.rs
rustlang/empty_server/: Cargo.toml  Rocket.toml
rustlang/empty_server/src/: main.rs  store.rs  tests.rs
rustlang/empty_server/src/store/: mod.rs  store_s3.rs
rustlang/http_server/: Cargo.toml  Configuration.toml  README.md  Rocket.toml  build.rs
rustlang/http_server/src/: config.rs  main.rs  tests.rs
rustlang/http_server/src_c/: CMakeLists.txt
rustlang/mini_restful_db/: .gitignore  Cargo.toml  Rocket.toml  build.rs
rustlang/mini_restful_db/src/: db.rs  main.rs
rustlang/simintech/: Cargo.toml
rustlang/simintech/.template/: c_types.h  complex_func.h  dsp_funcs.h  example.c  example.def  init.inc  matrixes.h  polynoms_funcs.h  pribor485.h  prog.h  prog.inc  sit_sparce_interface.h  specfuncs.h  splae_funcs.h  state.inc  tpp_funcs.h
rustlang/simintech/src/: lib.rs
rustlang/simple-aprs/: .gitignore  Cargo.toml  README.adoc
rustlang/simple-aprs/examples/: aprs_client.rs
rustlang/simple-aprs/src/: lib.rs
rustlang/tcpclient/: Cargo.toml
rustlang/tcpclient/src/: main.rs
stm32/f32a/Emulate/: CMakeLists.txt
stm32/f32a/Emulate/src/: f32.c  f32.h  f32_emu.c
stm32/f32a/Emulate/test/: add.f18
stm8/: .gitignore  CMakeLists.txt  stm8.dep  stm8.ewp  stm8.ewt
stm8/settings/: stm8.Debug.cspy.bat  stm8.Debug.cspy.ps1  stm8.Debug.general.xcl  stm8.dbgdt  stm8.dnx  stm8.wsdt
stm8/src/: circle_buf.c  circle_buf.h  main.c  serial_uart.c  uart_drv.c  uart_drv.h
stm8s/: .gitignore  CMakeLists.txt  console.bat
stm8s/cmake/: Generic-SDCC-C.cmake
stm8s/examples/: LB.pm  Makefile.include
stm8s/examples/Cnt_it/: main.c
stm8s/examples/GPIO_blink/: main.c
stm8s/examples/Mein/: .cproject  .project  Makefile  main.adb  main.c  main.elf
stm8s/examples/SPI_LCD/: LCD.c  font_5x7.h  font_5x8.h  font_8x8.h
stm8s/lib/: stm8s.h  uart.c  uart.h
stm8s/linux/: start_debugger.sh
untitled/: inserting_fsm.c  inserting_fsm.h
vm8080/: .gitignore  CMakeLists.txt
vm8080/src/: main.c  vm8080.c  vm8080.h
(+452 files in other folders)
