[package]
name = "abb_robo"
version = "0.1.0"
authors = ["Pastor <viruszold@gmail.com>"]
edition = "2018"

[features]
openssl = ["hyper-tls"]
rustls = ["hyper-rustls"]
default = ["openssl"]

[dependencies]
diesel = { version = "^1.4.4", features = ["sqlite", "numeric"] }
dotenv = "^0.15.0"
bytes = "1.0.1"
tokio = { version = "1.2", features = ["fs", "rt"] }

tracing = "^0.1.23"
tracing-futures = "^0.2"
tracing-appender = "^0.1"
tracing-subscriber = "^0.2.15"
multipart = { version = "0.17", default-features = false, features = ["client"] }

#telegram-bot-raw = { version = "0.9.0", path = "../raw" }
telegram-bot = { version = "0.9.0", git = "https://github.com/Pastor/telegram-bot", branch = "features/new-update-types" }
telegram-bot-raw = { version = "0.9.0", git = "https://github.com/Pastor/telegram-bot", branch = "features/new-update-types" }

hyper = { version = "0.14", features = ["client", "http1"] }
hyper-tls = { version = "0.5", optional = true }
futures = "0.3"
hyper-rustls = { version = "0.22", optional = true }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
bloom = "^0.2.0"
[dev-dependencies]

tokio = { version = "1.2", features = ["macros", "time", "fs", "rt-multi-thread"] }
