[package]
name = "empty_server"
version = "0.1.0"
authors = ["Андрей <viruszold@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "^0.4.2"
rocket_contrib = "^0.4.2"
log = "^0.4"
env_logger = "^0.6"
zip = "^0.5.4"
reqwest = { version = "0.10", features = ["blocking", "stream"] }

[features]
#default = ["enable_uncompressed"]
default = ["new_uninit"]
#enable_uncompressed = []
new_uninit = []
