[package]
name = "simintech"
version = "0.1.12"
authors = ["Pastor <viruszold@gmail.com>"]
edition = "2018"
autobins = false

[lib]
name = "simintech"
crate-type = ["dylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "simintech-sim"
test = false
bench = false

[dependencies]
ctor = "*"
tracing = "^0.1.23"
tracing-futures = "^0.2"
tracing-appender = "^0.1"
tracing-subscriber = "^0.2.15"
libc = "*"
rand = "*"