[package]
name = "tcpclient"
version = "0.1.0"
authors = ["pastor <viruszold@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "^0.7"
reqwest = { version = "^0.10", features = ["blocking"] }
[dependencies.log]
version = "^0.4.8"
features = ["std"]